--- a/style/styleNew.css
+++ b/style/styleNew.css
@@ -123,7 +123,7 @@ a:hover {
 }
 .profile-photo {
   max-width: 250px;
-  border-radius: 50%;
+  border-radius: 8px;
   border: 5px solid #ADD8E6; /* Secondary Accent (Light Blue) for border */
   box-shadow: 0 0 20px rgba(173, 216, 230, 0.4); /* Light Blue shadow */
 }
