--- a/style/styleNew.css
+++ b/style/styleNew.css
@@ -168,7 +168,7 @@ a:hover {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('images/data.jpg'); /* Assicurati che il percorso sia corretto */
+    background-image: url('misc/data.jpg'); /* Assicurati che il percorso sia corretto */
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
